[package]
name = "magnet"
version = "0.5.0"
edition = "2021"

[dependencies]
eframe = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rfd = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
open = "5.0"
url = "2.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"

[[bin]]
name = "magnet"
path = "src/main.rs"

# Hide console window on Windows in release builds
[target.'cfg(windows)'.build-dependencies]